--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="display">
               <div class="artboard artboard-demo phone-2">
 
-                <!-- start login form -->
+                <!-- start login form part-->
                 <div class="hero bg-base-200 min-h-screen">
                     <div class="hero-content flex-col">
                       <div class="card bg-base-100 w-full max-w-sm shrink-0 shadow-2xl">
@@ -34,7 +34,7 @@
                             <label class="label">
                               <span class="label-text">4 Digit Pin</span>
                             </label>
-                            <input id="pin-number" type="password" placeholder="Enter 4 Digit Pin" class="input input-bordered" required />
+                            <input id="pin-number" type="password" placeholder="Enter 4 Digit Pin" class="input input-bordered" autocomplete="off"  required />
                             <label class="label">
                               <a href="#" class="label-text-alt link link-hover">Forgot password?</a>
                             </label>
@@ -45,7 +45,8 @@
                         </form>
                       </div>
                     </div>
-                  </div>
+                </div>
+                <!-- End Login form part -->
 
               </div>
             </div>
