--- a/home.html
+++ b/home.html
@@ -12,8 +12,6 @@
       <link rel="stylesheet" href="./style/style.css">
 </head>
 <body>
-    
-
 
     <main class="flex justify-center">
         <div class="mockup-phone">
@@ -24,7 +22,7 @@
                 <!-- Avilable balance statement -->
                 <div class="stats shadow">
                     <div class="stat">
-                      <div class="stat-value">9400</div>
+                      <div id="avilable-balance" class="stat-value">9400</div>
                       <div class="stat-desc">Avilable Balance</div>
                     </div>
                   </div>
@@ -45,23 +43,22 @@
                         <label class="label">
                           <span class="label-text">Amount</span>
                         </label>
-                        <input type="email" placeholder="Enter amount" class="input input-bordered" required />
+                        <input id="add-money-filed" type="text" placeholder="Enter amount" class="input input-bordered" required />
                       </div>
                       <!-- Pin code input filed -->
                       <div class="form-control">
                         <label class="label">
                           <span class="label-text">Pin</span>
                         </label>
-                        <input type="password" placeholder="Enter Pin" class="input input-bordered" autocomplete="off" required />
+                        <input id="pin-filed" type="password" placeholder="Enter Pin" class="input input-bordered" autocomplete="off" required />
                       </div>
                       <!-- Add money Button -->
                       <div class="form-control mt-6">
-                        <button class="btn btn-primary">Add Money</button>
+                        <button id="btn-add-money" class="btn btn-primary">Add Money</button>
                       </div>
                     </form>
                   </div>
                 <!-- End Add money form  -->
-
               </div>
             </div>
           </div>
