added another part is cash out part, user successfully cash out their money

--- a/home.html
+++ b/home.html
@@ -35,8 +35,8 @@
                 </div>
                 <!-- Divider -->
                 <div class="divider"></div>
-                <!-- start Add money form -->
-                <div class="card bg-base-100 w-full max-w-sm shrink-0 shadow-2xl">
+                <!-- start Add money form part -->
+                <div class="hidden card bg-base-100 w-full max-w-sm shrink-0 shadow-2xl">
                     <form class="card-body">
                         <!-- Amount input filed -->
                       <div class="form-control">
@@ -58,7 +58,32 @@
                       </div>
                     </form>
                   </div>
-                <!-- End Add money form  -->
+                <!-- End Add money form part  -->
+
+                <!-- Start Cash Out money part -->
+                <div class="card bg-base-100 w-full max-w-sm shrink-0 shadow-2xl">
+                    <form class="card-body">
+                        <!-- Amount input filed -->
+                      <div class="form-control">
+                        <label class="label">
+                          <span class="label-text">Amount</span>
+                        </label>
+                        <input id="cashout-filed" type="text" placeholder="Enter amount" class="input input-bordered" required />
+                      </div>
+                      <!-- Pin code input filed -->
+                      <div class="form-control">
+                        <label class="label">
+                          <span class="label-text">Pin</span>
+                        </label>
+                        <input id="cashoutPin-filed" type="password" placeholder="Enter Pin" class="input input-bordered" autocomplete="off" required />
+                      </div>
+                      <!-- Add money Button -->
+                      <div class="form-control mt-6">
+                        <button id="btn-cashout" class="btn btn-primary">Add Money</button>
+                      </div>
+                    </form>
+                  </div>
+
               </div>
             </div>
           </div>
