--- a/home.html
+++ b/home.html
@@ -30,15 +30,15 @@
                 <div class="divider"></div>
                 <!-- Add Money and Cashout Button -->
                 <div>
-                    <button class="btn btn-lg">Add Money</button>
-                    <button class="btn btn-lg">Cashout</button>
+                    <button id="btn-show-addmoney" class="btn btn-lg">Add Money</button>
+                    <button id="btn-show-cashout" class="btn btn-lg">Cash Out</button>
                 </div>
                 <!-- Divider -->
                 <div class="divider"></div>
                 <!-- start Add money form part -->
-                <div class="hidden card bg-base-100 w-full max-w-sm shrink-0 shadow-2xl">
+                <div id="addmoney-form" class="card bg-base-100 w-full max-w-sm shrink-0 shadow-2xl">
                     <form class="card-body">
-                        <!-- Amount input filed -->
+                        <!-- Add Amount input filed -->
                       <div class="form-control">
                         <label class="label">
                           <span class="label-text">Amount</span>
@@ -61,9 +61,9 @@
                 <!-- End Add money form part  -->
 
                 <!-- Start Cash Out money part -->
-                <div class="card bg-base-100 w-full max-w-sm shrink-0 shadow-2xl">
+                <div id="cashout-form" class="hidden card bg-base-100 w-full max-w-sm shrink-0 shadow-2xl">
                     <form class="card-body">
-                        <!-- Amount input filed -->
+                        <!--Cash Out amount input filed -->
                       <div class="form-control">
                         <label class="label">
                           <span class="label-text">Amount</span>
@@ -77,9 +77,9 @@
                         </label>
                         <input id="cashoutPin-filed" type="password" placeholder="Enter Pin" class="input input-bordered" autocomplete="off" required />
                       </div>
-                      <!-- Add money Button -->
+                      <!-- Cash Out money Button -->
                       <div class="form-control mt-6">
-                        <button id="btn-cashout" class="btn btn-primary">Add Money</button>
+                        <button id="btn-cashout" class="btn btn-primary">Cash Out</button>
                       </div>
                     </form>
                   </div>
